# nova-snark-example

./: Cargo.toml  README.md
examples/: merkle_process_proof.rs
src/merkle_tree/: circuits.rs  mod.rs  tree.rs
