[package]
name = "nova-snark-example"
version = "0.1.0"
edition = "2021"

[dependencies]
bellperson = { version = "0.24", default-features = false }
bincode = "1.2.1"
ff = { version = "0.12.0", features = ["derive"] }
flate2 = "1.0"
generic-array = "0.14.4"
neptune = { version = "8.1.0", default-features = false }
nova-snark = { git = "https://github.com/microsoft/Nova", rev = "b5874df" }
pasta_curves = { version = "0.5.2", features = ["repr-c", "serde"], package = "fil_pasta_curves" }
serde = { version = "1.0", features = ["derive"] }
